codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__status_line_setup__tests__setup_view_snapshot_includes_hostname.snap
---
source: tui/src/bottom_pane/status_line_setup.rs
expression: "render_lines(&view,\n100).lines().map(str::trim_end).collect::<Vec<_>>().join(\"\\n\")"
---

  Configure Status Line
  Select which items to display in the status line.

  Type to search
  >
› [x] Use theme colors     Apply colors from the active /theme
  ───────────────────────
  [x] Hostname             Current machine hostname (omitted when unavailable)
  [x] Current directory    Current working directory
  [ ] Model                Current model name
  [ ] Model + reasoning    Current model name with reasoning level
  [ ] Reasoning            Current reasoning level
  [ ] Project name         Project name (omitted when unavailable)

  ssh-build-01.example.com · ~/codex-rs
  ↑/↓ select · Space toggle · ←/→ reorder · Enter save · Esc cancel
