codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__status_line_setup__tests__setup_view_snapshot_includes_thread_usage_items.snap
---
source: tui/src/bottom_pane/status_line_setup.rs
expression: "render_lines(&view, 100)"
---
                                                                                                    
  Configure Status Line                                                                             
  Select which items to display in the status line.                                                 
                                                                                                    
  Type to search                                                                                    
  >                                                                                                 
› [x] Use theme colors       Apply colors from the active /theme                                    
  ───────────────────────                                                                           
  [x] Thread credits         Estimated current-thread credits (Enterprise workspaces only; omitte…  
  [x] Estimated thread cost  Estimated current-thread cost in USD (Enterprise workspaces only; om…  
  [ ] Model                  Current model name                                                     
  [ ] Model + reasoning      Current model name with reasoning level                                
  [ ] Reasoning              Current reasoning level                                                
  [ ] Current directory      Current working directory                                              
                                                                                                    
  5.2 credits · ~$1.82                                                                              
  ↑/↓ select · Space toggle · ←/→ reorder · Enter save · Esc cancel
