codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__status_line_setup__tests__setup_view_snapshot_uses_runtime_preview_values.snap
---
source: tui/src/bottom_pane/status_line_setup.rs
expression: "render_lines(&view, 72)"
---
                                                                        
  Configure Status Line                                                 
  Select which items to display in the status line.                     
                                                                        
  Type to search                                                        
  >                                                                     
› [x] Use theme colors     Apply colors from the active /theme          
  ───────────────────────                                               
  [x] Model                Current model name                           
  [x] Current directory    Current working directory                    
  [x] Git branch           Current Git branch (omitted when unavailab…  
  [ ] Model + reasoning    Current model name with reasoning level      
  [ ] Reasoning            Current reasoning level                      
  [ ] Project name         Project name (omitted when unavailable)      
                                                                        
  gpt-5-codex · ~/codex-rs · jif/statusline-preview                     
  ↑/↓ select · Space toggle · ←/→ reorder · Enter save · Esc cancel
