codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__status_line_setup__tests__status_line_setup_custom_keymap_footer.snap
---
source: tui/src/bottom_pane/status_line_setup.rs
expression: footer
---
  Press space to toggle; ctrl + z/ctrl + x to move; f12 to confirm and close
